@@ -4,6 +4,8 @@ base-installer (1.15) UNRELEASED; urgency=low
   * Colin Watson
     - Recognise POWER4+ and PPC970FX cpuinfo entries as power4 systems.
     - Only look at the first cpu line in cpuinfo on powerpc.
+    - Add chrp_pseries tests based on /proc/cpuinfo provided by Cajus
+      Pollmeier.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 24 Dec 2004 01:49:56 +0000
 
